# arlington-pdf-model

./: .gitattributes  .gitignore  .~lock.PDF20Grammar.ods#  All_types.md  Arlington-vs-ISO32K-Tables.xlsx  Arlington-vs-ISO32K-Tabless.xlsx  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTORS.txt  EXTENSIONS.md  Grammar_vs_ISO32000-2.md  INTERNAL_GRAMMAR.md  LICENSE.md  MODEL_NOTES.md  Makefile  NOTICE.txt  PDF20Grammar-in-progress.ods  PDF20Grammar-special case in progress.ods  PDF20Grammar.ods  PDF20Grammar.xls  PDF20Grammar_2020-02-03.ods  PDF20Grammar_2020-02-11.ods  PDF20Grammar_2020-02-25.ods  PDF20Grammar_2020-02-26.ods  PDF20Grammar_2020-03-03.ods  PDF20Grammar_2020-03-09.ods  PDF20Grammar_2020-03-11.ods  PDF20Grammar_2020-03-12.ods  PDF20Grammar_2020-03-14.ods  PDF20Grammar_2020-03-14v2.ods  PDF20Grammar_2020-03-20.ods  PDF20Grammar_2020-03-23.ods  PDF20Grammar_2020-03-23v2.ods  README.md  SECURITY.md  cspell.json
.cspell/: custom-dictionary.txt
3dvisualize/: 3d-pdf-1.0-dom.json  3d-pdf-1.1-dom.json  3d-pdf-1.2-dom.json  3d-pdf-1.3-dom.json  3d-pdf-1.4-dom.json  3d-pdf-1.5-dom.json  3d-pdf-1.6-dom.json  3d-pdf-1.7-dom.json  3d-pdf-1.8-dom.json  3d-pdf-2.0-dom.json  3d-pdf-latest-dom.json  3d-pdfdom.html  3d-pdfdom.json  TSVto3D.py  pdf-1.0-dom.json  pdf-1.1-dom.json  pdf-1.2-dom.json  pdf-1.3-dom.json  pdf-1.4-dom.json  pdf-1.5-dom.json  pdf-1.6-dom.json  pdf-1.7-dom.json  pdf-2.0-dom.json  pdf-dom.json  pdf-latest-dom.json
Jupyter/: Arlington.ipynb  README.md  pandas.tsv
TestGrammar/: CMakeLists.txt  Doxyfile  README.md  TestGrammar.1.md  XRefStream.tsv  configure_pdfium.sh  do-linux.sh
TestGrammar/WinRel/: Makefile  cmake_install.cmake
TestGrammar/include/: OcrTesseract.h  PdfToHtml.h  Pdfix.h  README.md
TestGrammar/patches/: libjpeg_turbo-0001.patch  libjpeg_turbo-0002.patch
TestGrammar/pdfium/core/include/fpdfapi/: fpdf_objects.h  fpdf_parser.h
TestGrammar/pdfium/core/include/fxcrt/: fx_basic.h
TestGrammar/pdfium/core/include/thirdparties/freetype/freetype/config/: ftconfig.h
TestGrammar/pdfium/core/src/fpdfapi/fpdf_parser/: fpdf_parser_parser.cpp
TestGrammar/pdfium/core/src/fxcodec/lcms2/lcms2-2.6/include/: lcms2.h
TestGrammar/pdfium/core/src/fxcrt/: fx_basic_maps.cpp
TestGrammar/pdfium/core/src/fxge/win32/: fx_win32_dwrite.cpp
TestGrammar/pdfix/: Pdfix.h
TestGrammar/platform/eclipse/: .cproject  .project
TestGrammar/platform/msvc2017/: TestGrammar.sln  TestGrammar.vcxproj  TestGrammar.vcxproj.filters
TestGrammar/platform/msvc2019/: TestGrammar.vcxproj  TestGrammar.vcxproj.filters
TestGrammar/platform/msvc2022/: TestGrammar.vcxproj  TestGrammar.vcxproj.filters
TestGrammar/platform/msvc2026/: TestGrammar.vcxproj
TestGrammar/sarge/: sarge.cpp  sarge.h
TestGrammar/src/: ASTNode.h  ArlPredicates.h  ArlVersion.cpp  ArlVersion.h  ArlingtonPDFShim.h  ArlingtonPDFShimPDFium.cpp  ArlingtonPDFShimPDFix.cpp  ArlingtonPDFShimQPDF.cpp  ArlingtonTSVGrammarFile.cpp  ArlingtonTSVGrammarFile.h  CheckDVA.cpp  CheckGrammar.cpp  CheckGrammar.h  GrammarFile.cpp  GrammarFile.h  GrammarFile.hpp  Initialization.hpp  LRParsePredicate.cpp  LRParsePredicate.h  Main.cpp  PDFFile.cpp  PDFFile.h  ParseObjects.cpp  ParseObjects.h  ParseObjects.hpp  Pdfix.h  PredicateProcessor.cpp  PredicateProcessor.h  TestGrammarVers.h  Utils.cpp  utils.h
TestGrammar/test/: README.md  __BadArray.tsv  __BadDict.tsv
csv/: 3D.txt  3DActivation.csv  3DActivation.txt  3DAnimationStyle.csv  3DAnnotMarkupExData.csv  3DAnnotMarkupExData.txt  3DBG.csv  3DBG.txt  3DBackground.csv  3DCrossSection.csv  3DCrossSection.txt  3DLightningScheme.csv  3DMarkupAnnotExData.csv  3DMeasure.csv  3DMeasure3DC.csv  3DMeasureAD3.csv  3DMeasureAD3AdditionalEntries.csv  3DMeasureLD3.csv  3DMeasureLD3AdditionalEntries.txt  3DMeasurePD3.csv  3DMeasurePD3AdditionalEntries.txt  3DMeasureRD3.csv  3DNode.csv  3DReference.csv  3DRenderMode.csv  3DRenderMode.txt  3DStream.csv  3DUnits.csv  3DUnits.txt  3DView.csv  3DView.txt  Action.csv  Action.txt  ActionArray.csv  ActionDecision.csv  ActionECMAScript.csv  ActionECMAScript.txt  ActionGoTo.csv  ActionGoTo.txt  ActionGoTo3DView.csv  (+516 more)
gcxml/: README.md  build.xml  pom.xml
gcxml/nbproject/: build-impl.xml  genfiles.properties  (+2 more)
metanorma/: Gemfile  README.md  arlington-test.adoc  metanorma.yml
scripts/: Arlington.ipynb  README.md  arlington-fn-lex.py  arlington-to-json.py  arlington-to-pandas.py  arlington.py  pandas.tsv
tsv/: 3DActivation.tsv  3DAnimationStyle.tsv  3DBackground.tsv  3DCrossSection.tsv  3DLightningScheme.tsv  3DMeasure3DC.tsv  3DMeasureAD3.tsv  3DMeasureLD3.tsv  3DMeasurePD3.tsv  3DMeasureRD3.tsv  3DNode.tsv  3DReference.tsv  3DRenderMode.tsv  3DStream.tsv  3DUnits.tsv  3DView.tsv  3DViewAddEntries.tsv  ActionECMAScript.tsv  ActionGoTo.tsv  ActionGoTo3DView.tsv  ActionGoToDp.tsv  ActionGoToE.tsv  ActionGoToR.tsv  ActionHide.tsv  ActionImportData.tsv  ActionLaunch.tsv  ActionMovie.tsv  ActionNamed.tsv  ActionRendition.tsv  ActionResetForm.tsv  ActionRichMediaExecute.tsv  ActionSetOCGState.tsv  ActionSound.tsv  ActionSubmitForm.tsv  ActionThread.tsv  ActionTransition.tsv  ActionURI.tsv  AddActionAnnotation.tsv  AddActionFormField.tsv  AddActionPageObject.tsv  (+347 more)
xml/: 3DCrossSection.xml  3DMeasure.xml  3DMeasurePD3.xml  3DMeasureRD3.xml  3DUnits.xml  3DViewAddEntries.xml  ActionDecision.xml  AddActionCatalog.xml  AnnotDecision.xml  AppearanceCharacteristics.xml  AppearanceSubDict.xml  ArtifactsPropertyList.xml  AttributeObject.xml  AttributeObjectUserProperties.xml  Border.xml  BorderEffect.xml  BoxColorInfo.xml  BoxStyle.xml  CIDFontDescriptor.xml  CalGrayColourSpace.xml  CalRGBColourSpace.xml  CollectionColors.xml  CryptFilter.xml  DPartRoot.xml  DSS.xml  DestOutputProfileRef.xml  DeviceNColourSpace.xml  DeviceNMixingHints.xml  DocInfo.xml  DocMDPTransformParameters.xml  EmbeddedFileStream.xml  Encoding.xml  EncryptionPublicKeySecurityHandler.xml  ExternalDataAnnotAdditionalEntr.xml  FieldMDPTransformParameters.xml  FileSpecificationArray.xml  FixedPrint.xml  FloatingWindowParameters.xml  FormPrintersMark.xml  FunctionDecision.xml  (+61 more)
(+3384 files in other folders)
